--- a/plantillas/css/estilos.css
+++ b/plantillas/css/estilos.css
@@ -74,3 +74,13 @@
   font-size: 16px;
   font-weight: 500;
 }
+.AutoScroll {
+        background-color: #ffffd1;
+        /*color: #fff;*/
+        position: relative;
+        top: 0px;
+        max-height: 400px;
+        overflow-y: scroll;
+        padding: 20px;
+        /*border: 1px solid #121212;*/
+      }
