--- a/plantillas/scss/estilos.scss
+++ b/plantillas/scss/estilos.scss
@@ -4,7 +4,11 @@
     border-radius: 50%;
 }
 
-
+.imagen-sm {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
 
 .txt-comment {
     display: inline-block;
@@ -70,4 +74,31 @@
 .x_content h4 {
     font-size: 16px;
     font-weight: 500
+}
+
+.AutoScroll {
+    background-color: #ffffd1;
+    /*color: #fff;*/
+    position: relative;
+    top: 0px;
+    max-height: 400px;
+    overflow-y: scroll;
+    padding: 20px;
+    /*border: 1px solid #121212;*/
+}
+
+.paginador {
+    list-style-type: none;
+    padding-left: 0;
+    li {
+        float: left;
+        margin: 0 3px;
+        background: #fff;
+        border: 1px solid hsl(0,0%,80%);
+        padding: 10px;
+        border-radius: 15px;
+        a {
+            text-decoration: none;
+        }
+    }
 }
